[project]
name = "PyStratum-MySQL"
version = "2.0.0"
description = "PyStratum MySQL: MySQL & MariaDB Backend"
keywords = ["PyStratum", "MySql", "MariaDB"]
readme = "README.rst"
authors = [
    {name = "Set Based IT Consultancy", email = "info@setbased.nl"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Installation/Setup",
]
dependencies = [
    "PyStratum-Backend~=2.0.2",
    "PyStratum-Common~=2.0.0",
    "PyStratum-Middle~=1.1.0",
    "mysql-connector-python~=8.0.22",
]
license = {text = "MIT"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/DatabaseStratum/py-stratum-mysql"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
dev = [
    "PyStratum-Cli~=2.0.1",
    "Sphinx~=3.2.1",
    "coverage~=5.3",
    "sphinx-rtd-theme~=0.5.0"
]